# rclib

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml
.github/workflows/: ci.yml
dummyjson-cli/: Cargo.toml  README.md
dummyjson-cli/src/: dummyjson-openapi-spec.yaml  main.rs  mapping.yaml
rclib/: Cargo.toml  README.md
rclib/src/: cli.rs  error.rs  lib.rs  mapping.rs
rclib/tests/: integration_tests.rs
