[workspace]
members = [
    "rclib",
    "dummyjson-cli",
]
resolver = "2"

[workspace.dependencies]
# Common dependencies can be defined here
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
http = "1"
jsonpath_lib = "0.3"
openapiv3 = "1"
regex = "1"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
once_cell = "1"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1" }
chrono = { version = "0.4", features = ["serde"] }
