[workspace]
members = [
    "rclib",
    "dummyjson-cli",
]
resolver = "2"

[workspace.dependencies]
# Common dependencies can be defined here
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
jsonpath_lib = "0.3"
openapiv3 = "1"
regex = "1"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
once_cell = "1"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1" }
chrono = { version = "0.4", features = ["serde"] }

[workspace.lints.rust]
deprecated = "deny"
non_ascii_idents = "forbid"
unsafe_code = "forbid"
unused_mut = "warn"
noop_method_call = "warn"
unused_import_braces = "warn"

[workspace.lints.clippy]
# Workspace global rules
pedantic = { level = "warn", priority = -1 }
async_yields_async = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
clone_on_copy = "deny"
cognitive_complexity = "warn"
dbg_macro = "deny"
debug_assert_with_mut_call = "deny"
default_trait_access = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
elidable_lifetime_names = "deny"
empty_line_after_outer_attr = "warn"
empty_structs_with_brackets = "warn"
enum_glob_use = "deny"
expect_used = "warn"
explicit_iter_loop = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
format_push_string = "warn"
if_not_else = "warn"
ignored_unit_patterns = "warn"
implicit_clone = "warn"
items_after_statements = "warn"
implicit_hasher = "warn"
inefficient_to_string = "warn"
integer_division = "warn"
lossy_float_literal = "warn"
manual_assert = "warn"
manual_let_else = "warn"
manual_string_new = "warn"
many_single_char_names = "warn"
map_clone = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
match_wildcard_for_single_variants = "warn"
missing_errors_doc = "warn"
missing_fields_in_debug = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"
mutex_atomic = "warn"
needless_borrow = "deny"
needless_lifetimes = "deny"
needless_pass_by_value = "warn"
no_effect_underscore_binding = "warn"
non_ascii_literal = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
return_self_not_must_use = "warn"
semicolon_if_nothing_returned = "warn"
single_char_pattern = "warn"
similar_names = "warn"
single_match_else = "warn"
struct_excessive_bools = "warn"
suspicious_operation_groupings = "warn"
too_many_lines = "warn"
trivially_copy_pass_by_ref = "warn"
type_complexity = "warn"
uninlined_format_args = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
unused_async = "warn"
unused_self = "warn"
unwrap_used = "warn"
used_underscore_binding = "warn"
useless_let_if_seq = "warn"
wildcard_dependencies = "deny"
wildcard_imports = "deny"

# Catches redundant/inefficient patterns
redundant_clone = "deny"
redundant_pattern_matching = "warn"
redundant_pub_crate = "warn"
str_to_string = "warn"
manual_ok_or = "warn"
manual_map = "warn"
manual_filter_map = "warn"
manual_find_map = "warn"

# Prevents verbose/non-idiomatic code
match_bool = "warn"
needless_for_each = "warn"
needless_collect = "warn"
needless_late_init = "warn"
needless_option_as_deref = "warn"

# Memory efficiency and correctness
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
string_lit_as_bytes = "warn"
verbose_file_reads = "warn"

