[package]
name = "dummyjson-cli"
version = "0.1.0"
edition = "2021"
description = "A dummyjson.com mock AIP server CLI tool built with rclib"
license = "Apache 2.0"

[[bin]]
name = "dummyjson-cli"
path = "src/main.rs"

[dependencies]
rclib = { path = "../rclib" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
